Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_gentle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPE+SQ8uExOvmKcchnJfR+Z",
+      "authorship_tag": "ABX9TyNuSCjp4GKAQBKCvZeETyg5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2419,62 +2419,61 @@
         "# 先頭部分文 字列はそれより長い文字列よりも小さいと判定する。\r\n",
         "# たとえば、 \"cat\" < \"catalog\" である。\r\n",
         "\r\n",
-        "実際問題として、Eq および Ord のインスタンスは、ほとんどの場合、自動的に導出され、ユーザーが定義する必要はない。\r\n",
-        "ユーザーが定義する場合、同値関係と全順序関係という代数的な性質を維持するように注意しながら、\r\n",
-        "独自の同値述語や順序述語を定義しなければならない。\r\n",
+        "# 実際問題として、Eq および Ord のインスタンスは、ほとんどの場合、自動的に導出され、ユーザーが定義する必要はない。\r\n",
+        "# ユーザーが定義する場合、同値関係と全順序関係という代数的な性質を維持するように注意しながら、\r\n",
+        "# 独自の同値述語や順序述語を定義しなければならない。\r\n",
         "\r\n",
-        "自動詞的な (==)\r\n",
-        "述語は、たとえば、大変苦痛で、プログラムを読\r\n",
-        "むものを困惑させ、手動あるいは自動的な、(==)\r\n",
-        "述語が明白な同値性\r\n",
-        "の近似であることに依存する、プログラム変換を困難なものにする。\r\n",
+        "# (==) 述語をユーザー定義すると、プログラムを読むものを困惑させ、手動あるいは自動的な、(==)\r\n",
+        "# 述語が明白な同値性の近似であることに依存する、プログラム変換を困難なものにする。\r\n",
         "\r\n",
-        "とはいうものの、導出されるものとはちがう Eq あるいは\r\n",
-        "Ord のインスタンスが必要な場合もある。\r\n",
-        "もっとも重要な例は、\r\n",
-        "同じ抽象値をあらわす別の具体的な値となるような抽象型のインスタンスの例で\r\n",
-        "す。\r\n",
+        "# とはいうものの、導出されるものとはちがう Eq あるいはOrd のインスタンスが必要な場合もある。\r\n",
+        "# もっとも重要な例は、同じ抽象値をあらわす別の具体的な値となるような抽象型のインスタンスの例である。\r\n",
         "\r\n",
-        "列挙型は導出された Enum のインスタンスをもちいる。\r\n",
-        "ここで、この 型の順序は data\r\n",
-        "宣言での構築子の出現順になる。\r\n",
-        "たとえば、\r\n",
+        "# 列挙型は導出された Enum のインスタンスをもちいる。\r\n",
+        "# ここで、この型の順序は data 宣言での構築子の出現順になる。\r\n",
+        "# たとえば、\r\n",
         "\r\n",
-        "data Day = Sunday | Monday |\r\n",
-        "Tuesday | Wednesday\r\n",
-        "| Thursday | Friday | Saturday\r\n",
-        "deriving (Enum)\r\n",
+        "data Day = Sunday | Monday | Tuesday | Wednesday\r\n",
+        "         | Thursday | Friday | Saturday         deriving (Enum)\r\n",
         "\r\n",
-        "このとき、この型に対して導出されたインスタンスを用いた単純な例は次のようなものになる。\r\n",
+        "# このとき、この型に対して導出されたインスタンスを用いた単純な例は次のようなものになる。\r\n",
         "\r\n",
-        "[Wednesday .. Friday] =>\r\n",
-        "[Wednesday, Thursday, Friday]\r\n",
-        "[Monday, Wednesday ..] =>\r\n",
-        "[Monday, Wednesday, Friday]\r\n",
-        "その構成要素が Read (Show)\r\n",
-        "のインスタンスであるような 型なら、その型に対して Read\r\n",
-        "(Show) のインスタンスであ\r\n",
-        "ることを導出することが可能である。\r\n",
-        "(標準の型のほとんどについては、 Read および Show\r\n",
-        "のインスタンスであることが、プレリュー\r\n",
-        "ドのなかで示されている。\r\n",
-        "関数の型である (->) のような型の いくつかは、Show\r\n",
-        "インスタンスではあるが、それに対応した Read\r\n",
-        "のインスタンスではない。\r\n",
-        ") 導出された Show\r\n",
-        "インスタンスで定義されるテキストでの表現は、対象となる型の\r\n",
-        "Haskell での 定数式の見かけと整合性がある。\r\n",
-        "例えば、型 Day について Show と Read をその\r\n",
-        "deriving 節に加えると、\r\n",
         "\r\n",
-        "show [Monday .. Wednesday] =>\r\n",
-        "\"[Monday,Tuesday,Wednesday]\"\r\n",
+        "[Wednesday .. Friday]\t=>\t[Wednesday, Thursday, Friday]\r\n",
+        "[Monday, Wednesday ..]\t=>\t[Monday, Wednesday, Friday]\r\n",
         "\r\n",
-        "を得ることができる。\r\n",
+        "# その構成要素が Read (Show) のインスタンスであるような 型なら、その型に対して \r\n",
+        "# Read (Show) のインスタンスであることを導出することが可能である。\r\n",
+        "# (標準の型のほとんどについては、 Read および Show のインスタンスであることが、Prelude のなかで示されている。\r\n",
+        "# 関数の型である (->) のような型の いくつかは、Show インスタンスではあるが、\r\n",
+        "# それに対応した Read のインスタンスではない。\r\n",
+        "# ) 導出された Show インスタンスで定義されるテキストでの表現は、\r\n",
+        "# 対象となる型の Haskell での 定数式の見かけと整合性がある。\r\n",
+        "# 例えば、型 Day について Show と Read をその deriving 節に加えると、\r\n",
         "\r\n",
-        "A Gentle Introduction to\r\n",
-        "Haskell, Version 98\r\n",
-        "back next top\r\n"
+        "show [Monday .. Wednesday] => \"[Monday,Tuesday,Wednesday]\"\r\n",
+        "\r\n",
+        "# を得ることができる。\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uIuaHwsSHNcv"
+      },
+      "source": [
+        "# モナド monad"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eAgU9OOwHM3P"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
