--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_gentle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMYknSM4U+TzyCUJxZzxw4M",
+      "authorship_tag": "ABX9TyOU/K44pdCHxjlnEp9LIR39",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2574,15 +2574,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3Afd1DAExM2I"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "gu20Xw73z-YO"
@@ -2606,24 +2597,25 @@
         "\r\n",
         "# クラス MonadZero は zero 要素および plus 演算を もつモナドに対して定義されている。\r\n",
         "\r\n",
-        "# class  (Monad m) => MonadZero m  where\r\n",
-        "# mzero             :: m a\r\n",
-        "# mplus             :: m a -> m a -> m a\r\n",
+        "class  (Monad m) => MonadZero m  where\r\n",
+        "mzero             :: m a\r\n",
+        "mplus             :: m a -> m a -> m a\r\n",
         "\r\n",
         "# zero 要素は次の法則に従わなければならない。\r\n",
         "\r\n",
-        "# m >>= \\x -> mzero\t=\tmzero\r\n",
-        "# mzero >>= m\t=\tmzero\r\n",
+        "m >>= \\x -> mzero\t=\tmzero\r\n",
+        "mzero >>= m\t=\tmzero\r\n",
+        "\r\n",
         "# リストについていえば、zero 値は []、つまり空リストである。\r\n",
-        "# I/O モナドは zero 要素をもちません。\r\n",
-        "# つまり、このクラスには属しません。\r\n",
+        "# I/O モナドは zero 要素を持たない。\r\n",
+        "# つまり、このクラスには属さない。\r\n",
         "\r\n",
         "# mplus 演算を支配している法則は以下のようになっている。\r\n",
         "\r\n",
-        "# m `mplus` mzero\t=\tm\r\n",
-        "# mzero `mplus` m\t=\tm\r\n",
-        "# この mplus 演算はリストモナドではふつうの連結演算である。\r\n",
-        "\r\n"
+        "m `mplus` mzero\t=\tm\r\n",
+        "mzero `mplus` m\t=\tm\r\n",
+        "\r\n",
+        "# この mplus 演算はリストモナドではふつうの連結演算である。\r\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -2634,31 +2626,77 @@
         "id": "OovnWPGsdtqG"
       },
       "source": [
-        "# # 9.2  組み込みモナド\r\n",
-        "# モナド演算とそれらを支配する法則があるとなにが構築することができるでしょ うか。\r\n",
-        "# I/O モナドについてはすでに詳しくしらべたので、あとのふたつのモナドからはじめます。\r\n",
+        "# 9.2  組み込みモナド\r\n",
+        "# モナド演算とそれらを支配する法則があるとなにが構築することができるか。\r\n",
+        "# I/O モナドについてはすでに詳しくしらべたので、あとのふたつのモナドからはじめる。\r\n",
         "\r\n",
-        "# リストのモナド bind はリスト中のそれぞれの値にたいしての一連の計算を結合 する。\r\n",
+        "# リストのモナド bind はリスト中のそれぞれの値にたいしての一連の計算を結合する。\r\n",
         "# リストを使う場合は、>>= のシグネチャは以下のようになる。\r\n",
         "\r\n",
         "# (>>=)                   :: [a] -> (a -> [b]) -> [b] \r\n",
         "\r\n",
-        "# これは、a のリストと a を bのリストへ写像する 関数が与えられたとき、bind が、この関数を、入力それぞれの a に 適用して、生成したすべての b のリストを 1つのリストに連結する。\r\n",
+        "# これは、a のリストと a を bのリストへ写像する 関数が与えられたとき、\r\n",
+        "# bind が、この関数を、入力それぞれの a に 適用して、生成したすべての b のリストを 1つのリストに連結する。\r\n",
         "# return 関数は単一要素リストを生成する。\r\n",
         "# これらの演算については 既になれていることと思う。\r\n",
-        "# リストの内包表記はこのリストについて定義 されたモナド演算を使って簡単に表現することができる。\r\n",
+        "# リストの内包表記はこのリストについて定義されたモナド演算を使って簡単に表現することができる。\r\n",
         "# 以下の 3 つの式は すべて同じ式を別の構文で表現したものである。\r\n",
         "\r\n",
-        "# [(x,y) | x <- [1,2,3] , y <- [1,2,3], x /= y]\r\n",
+        "[(x,y) | x <- [1,2,3] , y <- [1,2,3], x /= y]\r\n",
         "\r\n",
-        "# do x <- [1,2,3]\r\n",
-        "# y <- [1,2,3]\r\n",
-        "# True <- return (x /= y)\r\n",
-        "# return (x,y)\r\n",
+        "do x <- [1,2,3]\r\n",
+        "   y <- [1,2,3]\r\n",
+        "   True <- return (x /= y)\r\n",
+        "   return (x,y)\r\n",
         "\r\n",
-        "# [1,2,3] >>= (\\ x -> [1,2,3] >>= (\\y -> return (x/=y) >>=\r\n",
-        "# (\\r -> case r of True -> return (x,y)\r\n",
-        "# _    -> fail \"\")))\r\n",
+        "[1,2,3] >>= (\\ x -> [1,2,3] >>= (\\y -> return (x/=y) >>=\r\n",
+        "   (\\r -> case r of True -> return (x,y)\r\n",
+        "                    _    -> fail \"\")))\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BxlbnmGy5x14",
+        "outputId": "3ca32a8b-7f36-4331-8c07-887adb3cce30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\r\n",
+        "!ghc -e $'[(x,y) | x <- [1,2,3] , y <- [1,2,3], x /= y]'\r\n",
+        "!ghc -e $'[1,2,3] >>= (\\x -> [1,2,3] >>= (\\y -> if (x/=y) then return (x,y) else fail \"\"))'"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(1,2),(1,3),(2,1),(2,3),(3,1),(3,2)]\n",
+            "[(1,2),(1,3),(2,1),(2,3),(3,1),(3,2)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Afd1DAExM2I"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yyYJMksi5vpn"
+      },
+      "source": [
         "\r\n",
         "# この定義は、このモナドでは fail の定義が空リストであることに依 存している。\r\n",
         "# 基本的には、それぞれの <- は、のこりのモナド計 算へつぎつぎと渡される値の集合を生成する。\r\n",
