Colaboratory を使用して作成しました

--- a/haskell_gentle.ipynb
+++ b/haskell_gentle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "haskell_gentle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOU/K44pdCHxjlnEp9LIR39",
+      "authorship_tag": "ABX9TyN2nOzKJcGPkquhkVwu80x9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -889,7 +889,7 @@
         "# マッチすると仮定した場合の値に束縛されるか、_|_ となる。\r\n",
         "\r\n",
         "# 遅延パターンは無限のデータ構造が再帰的に定義されているような場合に便利。\r\n",
-        "# 無限リストはシミュレーションプログラムを書くのに使いやすいデータ構造で、ストリームといいます。\r\n",
+        "# 無限リストはシミュレーションプログラムを書くのに使いやすいデータ構造で、ストリームという。\r\n",
         "\r\n",
         "# server と client との間のやりとりの簡単なケースを考える。\r\n",
         "# client は一連の要求を server に送り、server は各々の要求に対して、応答を返す。\r\n",
@@ -2659,11 +2659,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BxlbnmGy5x14",
-        "outputId": "3ca32a8b-7f36-4331-8c07-887adb3cce30",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BxlbnmGy5x14",
+        "outputId": "3ca32a8b-7f36-4331-8c07-887adb3cce30"
       },
       "source": [
         "# 実験\r\n",
@@ -2683,6 +2683,44 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yyYJMksi5vpn"
+      },
+      "source": [
+        "# この定義は、このモナドでは fail の定義が空リストであることに依 存している。\r\n",
+        "# 基本的には、それぞれの <- は、のこりのモナド計算へつぎつぎと渡される値の集合を生成する。\r\n",
+        "# であるから、x <- [1,2,3] はのこりのモナド計算を 3 回起動することになる。\r\n",
+        "# リストの各要素について 1回ずつである。\r\n",
+        "# 戻りの式 (x,y) はそれを取り巻く bind の可能な組み合わせすべてについて評価される。\r\n",
+        "# この意味ではリストモナドは多重値の引数をとる関数を記述しているものと考えることができる。\r\n",
+        "# たとえば、つぎの関数を考えてみる。\r\n",
+        "\r\n",
+        "mvLift2                :: (a -> b -> c) -> [a] -> [b] -> [c]\r\n",
+        "mvLift2 f x y          =  do    x' <- x\r\n",
+        "                                y' <- y\r\n",
+        "                                return (f x' y')\r\n",
+        "\r\n",
+        "# これは、通常の 2 引数関数を多重値 (引数リスト) 上の関数に変える。\r\n",
+        "# できた関数は 2つの引数のすべての組み合わせのそれぞれに対して 1つの値を返する。\r\n",
+        "\r\n",
+        "# たとえば、\r\n",
+        "\r\n",
+        "mvLift2 (+) [1,3] [10,20,30]\t=>\t[11,21,31,13,23,33]\r\n",
+        "mvLift2 (\\a b->[a,b]) \"ab\" \"cd\"\t=>\t[\"ac\",\"ad\",\"bc\",\"bd\"]\r\n",
+        "mvLift2 (*) [1,2,4] []\t=>\t[]\r\n",
+        "\r\n",
+        "# この関数はモナドライブラリの関数 LiftM2 の特別版である。\r\n",
+        "# これを、関数 f をリストモナドの外から、\r\n",
+        "# 多重値上の計算をおこなうリストモナドの世界へ持ち込んだものと考えることができる。\r\n",
+        "\r\n",
+        "# Maybe に対して定義されたモナドはリストモナドに類似している。\r\n",
+        "# 値 Nothing は [] の、Just x は [x] のように機能する。\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "3Afd1DAExM2I"
@@ -2694,52 +2732,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yyYJMksi5vpn"
-      },
-      "source": [
-        "\r\n",
-        "# この定義は、このモナドでは fail の定義が空リストであることに依 存している。\r\n",
-        "# 基本的には、それぞれの <- は、のこりのモナド計 算へつぎつぎと渡される値の集合を生成する。\r\n",
-        "# であるから、x <- [1,2,3] はのこりのモナド計算を 3 回起動するこ とになりる。\r\n",
-        "# リストの各要素について 1 回ずつである。\r\n",
-        "# 戻りの式 (x,y) はそれを取り巻く bind の可能な組み合わせすべてについて評 価される。\r\n",
-        "# この意味ではリストモナドは多重値の引数をとる関数を記 述しているものと考えることができる。\r\n",
-        "# たとえば、つぎの関数を考えてみましょ う。\r\n",
-        "\r\n",
-        "# mvLift2                :: (a -> b -> c) -> [a] -> [b] -> [c]\r\n",
-        "# mvLift2 f x y          =  do x' <- x\r\n",
-        "# y' <- y\r\n",
-        "# return (f x' y')\r\n",
-        "\r\n",
-        "# これは、通常の 2 引数関数を多重値(引数リスト)上の関数に変える。\r\n",
-        "# できた関数は 2 つの引数のすべての組み合わせのそれぞれに対して 1つ の値を返する。\r\n",
-        "# たとえば、\r\n",
-        "\r\n",
-        "# mvLift2 (+) [1,3] [10,20,30]\t=>\t[11,21,31,13,23,33]\r\n",
-        "# mvLift2 (\\a b->[a,b]) \"ab\" \"cd\"\t=>\t[\"ac\",\"ad\",\"bc\",\"bd\"]\r\n",
-        "# mvLift2 (*) [1,2,4] []\t=>\t[]\r\n",
-        "# この関数はモナドライブラリの関数 LiftM2 の特別版である。\r\n",
-        "# これを、関数 f をリストモナドの外から、多重値上の計算をおこなうリストモナドの世界へ持ち込んだものと考えることができる。\r\n",
-        "\r\n",
-        "# Maybe に対して定義されたモナドはリストモナドに類似している。\r\n",
-        "# 値 Nothing は [] の、Just x は [x] のように機能する。\r\n",
-        "\r\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ddJw7Qred4p1"
       },
       "source": [
-        "# # 9.3  モナドを使う\r\n",
+        "# モナドを使う\r\n",
+        "\r\n",
         "# モナド演算子とその法則について説明するだけではモナドがなんの役に立つのかわからない。\r\n",
-        "# モナドがもたらす効用は、モジュール化 ( modularity )である。\r\n",
-        "# すなわち、演算をモナド的に定義することで、底 流にある計算機というものを隠蔽し、新しい特徴をモナドに透過的に結びつける ことを可能にする。\r\n",
-        "# Wadler の論文 [10] はモナドを使っていかにモジュール化プログラムを構築するかの秀逸な例である。\r\n",
-        "# この 論文から直接、例をとるところからはじめます。\r\n",
+        "# モナドがもたらす効用は、モジュール化 modularity である。\r\n",
+        "# すなわち、演算をモナド的に定義することで、底流にある計算機というものを隠蔽し、\r\n",
+        "# 新しい特徴をモナドに透過的に結びつけることを可能にする。\r\n",
+        "# Wadler の論文はモナドを使っていかにモジュール化プログラムを構築するかの秀逸な例である。\r\n",
+        "# この 論文から直接、例をとるところからはじめる。\r\n",
         "# 状態モナドをもとによく似 た定義のさらに複雑なモナドを構築する。\r\n",
         "\r\n",
         "# 簡単にいうと、状態の型 S についての状態モナドというのは次のよう なものである。\r\n",
@@ -2817,7 +2820,7 @@
         "# このような言語は Haskell の基本ツールを使いる。\r\n",
         "# 関数と型を使って、対象 分野に特化した型と演算ライブラリを構築する。\r\n",
         "\r\n",
-        "# ここでの例では、なんらかのリソースを必要とする計算を考えます。\r\n",
+        "# ここでの例では、なんらかのリソースを必要とする計算を考える。\r\n",
         "# もしリ ソースが利用可能である場合、計算が先へ進み、リソースが利用できないときには、計算が保留される。\r\n",
         "# これから定義するモナドによって制御されている リソースを使う計算を表示するために、型 R を使いる。\r\n",
         "# R の定義は次のようになる。\r\n",
@@ -2889,7 +2892,7 @@
         "\r\n",
         "# しかし、この定義は一般のインクリメント関数に比べると満足のいくものではあ りません。\r\n",
         "# なんとか、既存の + 演算子を「ドレスアップ」して、この モナドの世界で機能するようにできないものか。\r\n",
-        "# 持ち上げ ( lifting )をおこなう関数の集りから始めます。\r\n",
+        "# 持ち上げ ( lifting )をおこなう関数の集りから始める。\r\n",
         "# これらの関数は、既存の機能をモナド内へ持ち込む。\r\n",
         "# lift1 の定義(これはMonad ライブラリの中の liftM1 とは少し違うものである)を考察してみる。\r\n",
         "\r\n",
