Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMIdfMQMfZCDI54VuN4kaB4",
+      "authorship_tag": "ABX9TyPDucO5HcPJpQAw37XWyJe+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6xB6iT_D_V8D"
+      },
+      "source": [
+        "%%capture\r\n",
+        "!apt install haskell-platform"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "JZqM1qwx2bFV"
@@ -36,6 +48,18 @@
         "1. Colab の環境を利用して Haskellを勉強する。Colab の環境は Hakell はインストールされていないので、インストールする。\n",
         "1. Colab の環境で Haskell のインタラクティブ環境は使えないので、`%%writefile filename.hs` でファイルを作り、`!runghc filename.hs` で実行するか、`!ghc -e` でコマンドラインワンライナーで実行する。\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5EeWHp0E_cvj"
+      },
+      "source": [
+        "# Meta-tutorial\r\n",
+        "# https://wiki.haskell.org/Meta-tutorial"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -68,55 +92,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S-NYRxs4SuLf"
-      },
-      "source": [
-        "# haskell(ghc)のインストール\n",
-        "%%capture\n",
-        "!apt install haskell-platform"
-      ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uFBBZYLDS8Ed",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "751f3bd1-7a5b-4ee9-a611-955ebef01bdd"
-      },
-      "source": [
-        "# インストールされたことの確認\n",
-        "!ghc --version"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/bin/bash: ghc: command not found\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Ba2HY_gpTx4I",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1ab5bbda-792f-438f-c797-e6173e8895e8"
+        "outputId": "ed17f2b6-db72-43ea-b0f0-9f750003e298"
       },
       "source": [
         "# ファイルを作る\n",
         "%%writefile hello.hs\n",
         "main = putStrLn \"hello, world\""
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,13 +121,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4074dbf-ca31-4b8b-8d77-d9c07c365e95"
+        "outputId": "a1b1360a-324d-435d-d0ca-90ec338659fa"
       },
       "source": [
         "# ファイルを実行する\r\n",
+        "# ファイルを作るセルと、実行するセルの両方を選択して、Ctrl+Shift+Enter が便利\r\n",
         "!runghc hello.hs"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,14 +146,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3ad3371a-afee-4062-d9fc-5d59811f3fe5"
+        "outputId": "93206c57-7cd2-4621-8deb-998d44843db0"
       },
       "source": [
         "# シェル(コマンドラインワンライナー)で実行する\n",
         "# 便利なので多用する\n",
-        "!ghc -e 'putStrLn \"hello world!\"'"
+        "!ghc -e $'putStrLn \"hello world!\"'"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,8 +170,10 @@
         "id": "lWcYdzaZh0Id"
       },
       "source": [
-        "# ユーザーとのやり取りもできるが、Colab では使わないこととする\r\n",
+        "# ユーザーとのやり取りもできるが、Colab では使わない\r\n",
         "# 実行を中断 Ctrl+MI で入力待ちから抜ける\r\n",
+        "# すべてのセルを実行するときに邪魔になるので、インタラクティブなプログラムは %%script false としておく\r\n",
+        "# その他説明用のメタプログラムも %%script false で書く\r\n",
         "%%script false\r\n",
         "!ghc -e \"interact (unlines.map reverse.lines)\""
       ],
@@ -207,30 +197,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KKwu4FRKcsNu",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f47cf60a-0ee0-4153-d75b-93412ecc1caf"
+        "id": "KKwu4FRKcsNu"
       },
       "source": [
         "# echo と getContents を使う\r\n",
+        "# echo からパイプで入力する場合は入力待ちなしで出力になる\r\n",
         "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  print . unlines .map reverse.lines\"\r\n",
         "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  mapM_ putStrLn . map reverse.lines\""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\"nep a si siht\\nfedcba \\n54321\\n\"\n",
-            "nep a si siht\n",
-            "fedcba \n",
-            "54321\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -248,17 +224,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ef86a203-7bcf-4604-f2ed-e737419a9860"
+        "outputId": "5176b743-219f-42bd-ca47-99143d98cc0b"
       },
       "source": [
         "# 実験 コマンドラインワンライナーを普通のプログラムにしてみる\r\n",
+        "# これは vscode の haskell extention で format したもの\r\n",
         "%%writefile mapmreverse.hs\r\n",
         "main =\r\n",
         "  getContents\r\n",
         "    >>= mapM_ (putStrLn . reverse)\r\n",
         "      . lines"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,12 +253,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "436f2ed9-789d-456f-ad0b-2d57b1a28b1a"
+        "outputId": "b3f53622-73d5-4225-c5d0-20ca732bdc66"
       },
       "source": [
         "!echo $'this is a pen\\n abcdef\\n12345' | runghc mapmreverse.hs"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,13 +278,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c3e2aad7-5dbc-4c27-962b-6dc22b964016"
+        "outputId": "a1f932fc-a901-4041-9eda-12e1bb1de6dc"
       },
       "source": [
         "# 実験 lines の代わりに words を使う\r\n",
+        "# コマンドラインワンライナーを実行する際は Ctrl+Enter でオッケー\r\n",
         "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e 'getContents>>= mapM_(putStrLn.reverse).words'"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +331,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9d3f82ed-d09d-449f-a9e7-b8d09f4fc50f"
+        "outputId": "f06e12f6-6b1c-4507-9bc8-07bae8bb1952"
       },
       "source": [
         "%%writefile print01.hs\n",
@@ -361,7 +339,7 @@
         "  print \"Haskell\\nand\\nPython\"  \n",
         "  putStrLn \"Haskell\\nand\\nPython\"  \n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,12 +357,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "39f21b64-9010-4218-e699-07d37057ebd8"
+        "outputId": "9f93de5f-ce35-46c5-aafa-f1f3209b9c03"
       },
       "source": [
         "!runghc print01.hs"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +386,8 @@
         "outputId": "e72bb21b-c740-4af9-e385-7b47a284387d"
       },
       "source": [
-        "# 実験 数字を直接 putStrLn の引数にするとエラーになるので show で文字列に変換する。\n",
+        "# 実験 数字を直接 putStrLn の引数にするとエラーになるので show で文字列に変換する\n",
+        "# show の反対は read\n",
         "!ghc -e 'putStrLn(show(32))'"
       ],
       "execution_count": null,
@@ -429,20 +408,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d9d2bd7f-e503-4625-98b6-600a5b4e51b6"
+        "outputId": "288f8675-6668-429d-c13b-f86dc02c3f46"
       },
       "source": [
         "!ghc -e 'print 32'\r\n",
         "!ghc -e 'print (32, 18)'\r\n",
+        "!ghc -e 'print (32*18)'\r\n",
         "!ghc -e 'print (32*18)'"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "32\n",
             "(32,18)\n",
+            "576\n",
             "576\n"
           ],
           "name": "stdout"
@@ -467,7 +448,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b2c36d8-62b3-44b1-bd3d-5d4f100bd6c2"
+        "outputId": "076eb359-461c-4550-d40b-968dd90aa58e"
       },
       "source": [
         "%%writefile if01.hs\n",
@@ -475,7 +456,7 @@
         "  let fac n = if n == 0 then 1 else n * fac (n-1)  \n",
         "  in print ( fac 42 )"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,12 +474,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a58ea9b0-66a9-41db-f09b-ed2287f26ee8"
+        "outputId": "cb1b6f42-808c-4625-abca-4e62417aa821"
       },
       "source": [
         "!runghc if01.hs"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +546,7 @@
       "source": [
         "階乗を計算する関数を作って再帰的に実行している。\n",
         "\n",
-        "なかなかすごいのではないか。\n"
+        "階乗のことを英語で factorial と言う。\n"
       ]
     },
     {
@@ -585,16 +566,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "95da4cae-6ee1-4e39-d487-986f3ada7b6d"
+        "outputId": "11c59912-d4d8-4de2-ab85-8f39f7de6171"
       },
       "source": [
-        "# 以下のような関数の作り方はなんと呼ぶのか。パターンマッチング?\n",
+        "# 以下のような関数の作り方をパターンマッチングと言う\n",
         "%%writefile fac01.hs\n",
         "fac 0 = 1  \n",
         "fac n = n * fac (n-1)  \n",
+        "\n",
         "main = print (fac 42)  \n"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -612,17 +594,117 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34d1e2c3-28f3-4117-9e9a-44eccae7fbdf"
+        "outputId": "e5b9aabe-01d6-4e52-9ef8-fdb0828f370a"
       },
       "source": [
         "!runghc fac01.hs"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "1405006117752879898543142606244511569936384000000000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U5ww5A2IEn-I",
+        "outputId": "26c3390b-83e5-4210-ae8f-dbc41eb63916",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# このまま、パターンマッチングでコマンドラインワンライナーにできるか\r\n",
+        "!ghc -e $'let {fac 0 = 1 ; fac n = n * fac (n-1);} in print (fac 42)'"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1405006117752879898543142606244511569936384000000000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bD9ZD8CYF8JT",
+        "outputId": "60021a5d-4fe9-43e1-eb36-be4b70377638",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# case 構文を使えるか\r\n",
+        "%%writefile fac02.hs\r\n",
+        "fac n = case n of \r\n",
+        "    0 -> 1\r\n",
+        "    _ -> n * fac (n-1)\r\n",
+        "\r\n",
+        "main = print (fac 5)  "
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting fac02.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ib0R6GvbHlkz",
+        "outputId": "f6768cba-01a6-47ee-8b85-28ce3ebcc39a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc fac02.hs"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "120\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I2cm0XoTIThS",
+        "outputId": "3dbead3f-b896-48dd-a452-954dc64efd11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# case をコマンドラインワンライナーで使えるか\r\n",
+        "!ghc -e $'let {fac n = case n of 0 -> 1; _ -> n * fac (n-1)} in print (fac 7)'"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5040\n"
           ],
           "name": "stdout"
         }
@@ -647,6 +729,7 @@
         "outputId": "b01bf952-128a-4ca1-ea5e-59cd55d60129"
       },
       "source": [
+        "# 四則演算は割り算だけ気をつける\n",
         "%%writefile arithmetic01.hs\n",
         "main = do\n",
         "  print $ 3 * 5\n",
@@ -701,6 +784,7 @@
         "outputId": "2130ff44-3ade-44a4-c546-43c6248dffa0"
       },
       "source": [
+        "# 電卓代わりに使える\r\n",
         "!ghc -e '3*5'\r\n",
         "!ghc -e '4 ^ 2 - 1'\r\n",
         "!ghc -e '(1-5)^(3*2 - 4)'\r\n",
@@ -851,65 +935,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ctM7K9ZNwdLy"
-      },
-      "source": [
-        "# ワンライナー\n",
-        "\n",
-        "`ghci -e`  でワンライナーが書ける、とういうので実験。\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kxB5SULE_Nre",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "909f289c-3c65-4b11-dd36-da1530d83247"
-      },
-      "source": [
-        "!ghc -e 'putStrLn \"hello world\"'\n",
-        "!ghc -e 'print \"hello world\"'"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "hello world\n",
-            "\"hello world\"\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-rjT7qBbhfnC",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "164f00dd-1ace-4ef4-e0e1-b02e0d9b424a"
-      },
-      "source": [
-        "!ghc -e  'print $ truncate (-6.59)'"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "-6\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "8BX5lnthiYRv",
@@ -1007,6 +1032,7 @@
         "outputId": "a65a7e36-651e-4c7d-becd-8ea744e8d86a"
       },
       "source": [
+        "# map 関数とラムダ式(無名関数)\r\n",
         "!ghc -e 'map (\\x ->  x^2) [1..3]'"
       ],
       "execution_count": null,
@@ -1030,6 +1056,7 @@
         "outputId": "a5987a68-6125-4da2-b9f1-3cab5ced8f8d"
       },
       "source": [
+        "# IO がからんだ map は mapM を使う\r\n",
         "!ghc -e 'mapM print [1..3]'\r\n",
         "!ghc -e 'mapM_ print [1..3]' # 結果のリストを返さないバージョン"
       ],
@@ -1048,6 +1075,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pGkxxHYpKX8l"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
