Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPDucO5HcPJpQAw37XWyJe+",
+      "authorship_tag": "ABX9TyPCV2mJmEIOJiarz5gWiFLd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,28 +26,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2iY_Spz7PuEV"
+      },
+      "source": [
+        "# メモ\r\n",
+        "1. このノートブックは Colab で読まれることを想定している。 是非 Colab で開いてください。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6xB6iT_D_V8D"
       },
       "source": [
+        "# Colab の環境に haskell をインストールする\r\n",
+        "# %%capture で出力を出さないようにしている\r\n",
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JZqM1qwx2bFV"
-      },
-      "source": [
-        "# メモ\n",
-        "1. このノートブックは Colab で読まれることを想定している。 是非 Colab で開いてください。\n",
-        "1. Colab の環境を利用して Haskellを勉強する。Colab の環境は Hakell はインストールされていないので、インストールする。\n",
-        "1. Colab の環境で Haskell のインタラクティブ環境は使えないので、`%%writefile filename.hs` でファイルを作り、`!runghc filename.hs` で実行するか、`!ghc -e` でコマンドラインワンライナーで実行する。\n"
-      ]
     },
     {
       "cell_type": "code",
@@ -69,6 +69,8 @@
       "source": [
         "参考\n",
         "1. とりあえずは Haskell の入門書や入門サイトからサンプルプログラムを入力してみる。\n",
+        "1. Meta-tutorial  \n",
+        "https://wiki.haskell.org/Meta-tutorial\n",
         "1. ワンライナー的実行  \n",
         "https://haskell.jp/blog/posts/2017/08-ghc-4way-execution.html#ワンライナー的実行\n",
         "1. Learn You A Haskell For Great Good! (http://learnyouahaskell.com/)  \n",
@@ -103,7 +105,7 @@
         "%%writefile hello.hs\n",
         "main = putStrLn \"hello, world\""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +130,7 @@
         "# ファイルを作るセルと、実行するセルの両方を選択して、Ctrl+Shift+Enter が便利\r\n",
         "!runghc hello.hs"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +155,7 @@
         "# 便利なので多用する\n",
         "!ghc -e $'putStrLn \"hello world!\"'"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +237,7 @@
         "    >>= mapM_ (putStrLn . reverse)\r\n",
         "      . lines"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -258,7 +260,7 @@
       "source": [
         "!echo $'this is a pen\\n abcdef\\n12345' | runghc mapmreverse.hs"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +287,7 @@
         "# コマンドラインワンライナーを実行する際は Ctrl+Enter でオッケー\r\n",
         "!echo $'this is a pen\\n abcdef\\n12345' | ghc -e 'getContents>>= mapM_(putStrLn.reverse).words'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,7 +341,7 @@
         "  print \"Haskell\\nand\\nPython\"  \n",
         "  putStrLn \"Haskell\\nand\\nPython\"  \n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +364,7 @@
       "source": [
         "!runghc print01.hs"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +418,7 @@
         "!ghc -e 'print (32*18)'\r\n",
         "!ghc -e 'print (32*18)'"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +458,7 @@
         "  let fac n = if n == 0 then 1 else n * fac (n-1)  \n",
         "  in print ( fac 42 )"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +481,7 @@
       "source": [
         "!runghc if01.hs"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +578,7 @@
         "\n",
         "main = print (fac 42)  \n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,7 +601,7 @@
       "source": [
         "!runghc fac01.hs"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,16 +616,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "U5ww5A2IEn-I",
-        "outputId": "26c3390b-83e5-4210-ae8f-dbc41eb63916",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "26c3390b-83e5-4210-ae8f-dbc41eb63916"
       },
       "source": [
         "# このまま、パターンマッチングでコマンドラインワンライナーにできるか\r\n",
         "!ghc -e $'let {fac 0 = 1 ; fac n = n * fac (n-1);} in print (fac 42)'"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,10 +640,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bD9ZD8CYF8JT",
-        "outputId": "60021a5d-4fe9-43e1-eb36-be4b70377638",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "60021a5d-4fe9-43e1-eb36-be4b70377638"
       },
       "source": [
         "# case 構文を使えるか\r\n",
@@ -652,7 +654,7 @@
         "\r\n",
         "main = print (fac 5)  "
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,15 +669,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ib0R6GvbHlkz",
-        "outputId": "f6768cba-01a6-47ee-8b85-28ce3ebcc39a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f6768cba-01a6-47ee-8b85-28ce3ebcc39a"
       },
       "source": [
         "!runghc fac02.hs"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,16 +692,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "I2cm0XoTIThS",
-        "outputId": "3dbead3f-b896-48dd-a452-954dc64efd11",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3dbead3f-b896-48dd-a452-954dc64efd11"
       },
       "source": [
         "# case をコマンドラインワンライナーで使えるか\r\n",
         "!ghc -e $'let {fac n = case n of 0 -> 1; _ -> n * fac (n-1)} in print (fac 7)'"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,30 +1080,24 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pGkxxHYpKX8l"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "91UoXa9HTXHZ",
-        "outputId": "051ff614-436c-48af-fcee-2e820c85258a"
+        "outputId": "477c490e-9178-4e4f-a3da-fd6e32f9100a"
       },
       "source": [
+        "# 実験 echo で入力をシミュレートする\r\n",
+        "# $''で囲むことにより改行コード \\n とかをプログラムに流し込める\r\n",
         "!echo 'this\\nis' | ghc -e 'getLine'\r\n",
         "!echo\r\n",
         "!echo $'this\\nis' | ghc -e 'getLine'\r\n",
-        "!echo $'this\\nis' | ghc -e 'getContents >>= print . lines'"
+        "!echo $'this\\nis' | ghc -e 'getContents >>= print . lines'\r\n",
+        "!echo 'this\\nis' | ghc -e 'getContents >>= print . lines'"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1109,7 +1105,8 @@
             "\"this\\\\nis\"\n",
             "\n",
             "\"this\"\n",
-            "[\"this\",\"is\"]\n"
+            "[\"this\",\"is\"]\n",
+            "[\"this\\\\nis\"]\n"
           ],
           "name": "stdout"
         }
@@ -1122,7 +1119,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WQO_woD2Tq2K",
-        "outputId": "e19939b4-9d4d-438a-c652-ace0beb03f90"
+        "outputId": "c25122ad-330d-4394-fd98-2ec58c2a018f"
       },
       "source": [
         "!echo $'this\\nis' | ghc -e 'getLine >>= putStrLn'\r\n",
@@ -1131,9 +1128,10 @@
         "!echo\r\n",
         "!echo $'this\\nis' | ghc -e 'do {x <- getLine ; putStrLn x}'\r\n",
         "!echo\r\n",
-        "!echo $'this\\nis' | ghc -e 'do {x <- getContents ; mapM_ print (lines(x))}'"
+        "!echo $'this\\nis' | ghc -e 'do {x <- getContents ; mapM_ print (lines(x))}'\r\n",
+        "!echo $'this\\nis' | ghc -e 'do {x <- getContents ; mapM_ putStrLn (lines(x))}'"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,11 +1141,23 @@
             "this\n",
             "\n",
             "this\n",
+            "\n",
             "\"this\"\n",
-            "\"is\"\n"
+            "\"is\"\n",
+            "this\n",
+            "is\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QIkcriMJRtNh"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
